--- a/.github/workflows/snake.yml
+++ b/.github/workflows/snake.yml
@@ -1,26 +1,26 @@
-name: Generate Snake Contribution Grid
+name: Generate Snake
 
 on:
   schedule:
-    - cron: "0 0 * * *"  # Runs daily at midnight UTC
-  workflow_dispatch:  # Allows manual execution
+    - cron: "0 0 * * *"  # Runs every day at midnight UTC
+  workflow_dispatch: # Allows manual triggering
 
 jobs:
-  snake:
+  generate:
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout Repository
-        uses: actions/checkout@v3
-
-      - name: Generate Snake
+      - name: Generate Snake Animation
         uses: Platane/snk@v3
         with:
-          github_user_name: "aabhiiih"
-          outputs: "github-contribution-grid-snake.svg, github-contribution-grid-snake-dark.svg"
+          github_user_name: aabhiiih
+          outputs: |
+            dist/github-contribution-grid-snake.svg
+            dist/github-contribution-grid-snake-dark.svg?palette=github-dark
 
-      - name: Commit and Push
-        uses: EndBug/add-and-commit@v9
+      - name: Push the generated animation to the output branch
+        uses: crazy-max/ghaction-github-pages@v3
         with:
-          message: "Updated snake animation"
-          default_author: github_actions
-          add: "output/github-contribution-grid-snake.svg output/github-contribution-grid-snake-dark.svg"
+          target_branch: output
+          build_dir: dist
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
